# ursus

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
engine/: Cargo.toml  build.rs
engine-core/: Cargo.toml
engine-core/src/: app.rs  ffi.rs  flags.rs  lib.rs
engine-core/src/assets/: builtin_loaders.rs  cpu_server.rs  gpu_server.rs  loader_job.rs  loader_registry.rs  loaders.rs  material.rs  mesh.rs  mod.rs  shader_registry.rs  upload.rs
engine-core/src/assets/text/: mod.rs  renderer.rs
engine-core/src/ecs/: mod.rs  world.rs
engine-core/src/ecs/components/: camera.rs  light.rs  mesh.rs  mod.rs  transform.rs  ui.rs
engine-core/src/math/: frustum.rs  light_frustum.rs
engine-core/src/render/: frame_stats.rs  graph.rs  mod.rs  resource.rs  world.rs
engine-core/src/render/extract/: camera.rs  lights.rs  meshes.rs  mod.rs  shape_ui.rs  ui.rs
engine-core/src/render/frame_pipeline/: default_pipeline.rs  loading_pipeline.rs  mod.rs  render_pipeline.rs
engine-core/src/render/gfx/: blend.rs  buffer_usage.rs  descriptor.rs  encoder.rs  format.rs  handles.rs  light_buffer.rs  mod.rs  pipeline_cache.rs  sampler.rs  vertex.rs
engine-core/src/render/thread/: command.rs  mod.rs
engine-core/src/vulkan/: mod.rs  renderer.rs  timestamps.rs
engine-core/src/vulkan/core/: commands.rs  debug.rs  device.rs  instance.rs  swapchain.rs  sync.rs
engine-core/src/vulkan/gfx_pipeline/: builder.rs  material_buffer.rs  mod.rs  pipeline.rs  shader.rs
engine-core/src/vulkan/passes/: geometry.rs  lighting.rs  ui.rs
engine-core/src/vulkan/resources/: bindless.rs  depth.rs  gbuffer.rs  light_buffer.rs  mapped_buffer.rs  mapped_uniform.rs  mod.rs  render_target.rs  shadow_map.rs  texture.rs
engine-gltf-loader/: Cargo.toml
engine-gltf-loader/src/: lib.rs  loader.rs  materials.rs  tangents.rs
engine-pipelines/: Cargo.toml  build.rs
engine-pipelines/shaders/: depth_prepass.frag  depth_prepass.vert  fsr_easu.frag  loading_pipeline.frag  shadow.frag  shadow.vert
engine-pipelines/src/: builtin_shaders.rs  deferred.rs  lib.rs  loading.rs
engine-pipelines/src/passes/: depth_prepass.rs  geometry.rs  material_buffer.rs  mod.rs  shadow.rs
engine/shaders/: fsr_rcas.frag  lighting.frag  loading_pipeline.frag  mesh.frag  mesh.vert  post_process.frag  shadow.vert  triangle.vert  ui.frag  ui.vert
engine/src/: app.rs  debug_ui.rs  egui_layer.rs  extract.rs  ffi.rs  lib.rs  profiler.rs  render_world.rs  render_world_extract.rs  triple_buffer.rs
engine/src/assets/: builtin_shaders.rs  cpu_server.rs  gpu_server.rs  loader_job.rs  loaders.rs  material.rs  mesh.rs  mod.rs  pending.rs  server.rs  shader_registry.rs  upload.rs
engine/src/ecs/: components.rs  mod.rs  systems.rs  world.rs
engine/src/lighting/: buffer.rs  mod.rs  shadow.rs
engine/src/math/: light_frustum.rs  mod.rs
engine/src/pipeline/: default_pipeline.rs  loading_pipeline.rs  mod.rs  render_pipeline.rs
engine/src/render/: extract.rs  frame_ctx.rs  graph.rs  mod.rs  world.rs
engine/src/render_graph/: graph.rs  mod.rs  resource.rs
engine/src/render_thread/: command.rs  mod.rs
engine/src/vulkan/: bindless.rs  commands.rs  debug.rs  depth.rs  device.rs  frame_ctx.rs  frustum.rs  gbuffer.rs  instance.rs  lights.rs  material_buffer.rs  mod.rs  pipeline.rs  render_target.rs  renderer.rs  shader.rs  shadow.rs  swapchain.rs  sync.rs  texture.rs  timestamps.rs
(+74 files in other folders)
