[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.30.13"
raw-window-handle = "0.6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
glam = "0.33.0"
hecs = "0.11.0"
bytemuck = "1.25.0"
image = { version = "0.25.10", features = ["png", "jpeg"], default-features = false }
cosmic-text = "0.19.0"
etagere = "0.3.0"
puffin = "0.20.0"
puffin_http = "0.17.0"
clap = { version = "4", features = ["derive"] }

engine-macros = { path = "../engine-macros" }

[build-dependencies]