[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.30.13"
raw-window-handle = "0.6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
glam = "0.33.0"
hecs = "0.11.0"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "tga", "bmp", "webp"] }
tobj = "4"
gltf = { version = "1", features = ["image"] }
egui = { version = "0.33.3", default-features = false, features = ["default_fonts"] }
egui-winit = { version = "0.33.3", default-features = false, features = ["wayland", "x11"] }
egui-ash-renderer = { version = "0.11", features = ["dynamic-rendering"] }

[build-dependencies]