[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.30.13"
raw-window-handle = "0.6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
glam = "0.33.0"
hecs = "0.11.0"
bytemuck = "1.25.0"
image = "0.25.10"
tobj = "4.0.4"
gltf = "1.4.1"
cosmic-text = "0.19.0"
etagere = "0.3.0"
puffin = "0.20.0"
resvg = "0.47.0"
puffin_http = "0.17.0"

[build-dependencies]